# Systemmonitor

./: .gitignore  CMakeLists.config  CMakeLists.txt  LICENSE  README.md  monitor_canvas.cpp  monitor_canvas.hpp  system_application.cpp  system_application.hpp  system_monitor.cpp  system_monitor.hpp  system_monitor_tests.cpp
